[workspace]
members = ["crates/bonked2d", "crates/bonked3d"]
resolver = "2"

[workspace.package]
description = "simple collision engine for retro console development"
authors = ["Olivier Schyns <https://github.com/oschijns>"]
repository = "https://github.com/oschijns/bonked"
version = "0.0.2"
edition = "2024"
license = "MIT"

[patch.crates-io]
bonked2d = { path = "crates/bonked2d" }
bonked3d = { path = "crates/bonked3d" }
