[package]
name = "bonked3d"
description = "Simple 3D collision engine"
authors.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
#license.workspace = true

# Compile Features
[features]
default = ["required-features", "parry-f32", "mask-u32", "alloc"]
#default = ["required-features", "parry-f32", "mask-u32", "std"]
required-features = ["3d"]
3d = []
2d = []
mask-u32 = []
mask-u64 = []

# enable support for the standard library
std = [
    "parry3d?/std",
    "parry3d-f64?/std",
    "nalgebra-glm/std",
    "bvh-arena/std",
    "spin/std",
]

# enable support for alloc
alloc = ["parry3d?/alloc", "parry3d-f64?/alloc"]

# enable support for Single Instruction Multiple Data
simd = ["parry3d?/simd-stable", "parry3d-f64?/simd-stable"]

# We unfortunately can't reuse the f32 and f64 features for this,
# because Parry uses separate crates for f32 and f64.
parry-f32 = ["dep:parry3d"]
parry-f64 = ["dep:parry3d-f64"]


# Ignore "2d" feature
[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature = "2d")'] }


# Library configuration
[lib]
name = "bonked3d"
path = "../../src/lib.rs"


# Dependencies
[dependencies]

# Mutable access to shared references
spin = "0.10"

# Broadphase
bvh-arena = { version = "1.1", default-features = false }

# Collision Detection
parry3d = { version = "0.19", features = [
    "required-features",
    "alloc",
], default-features = false, optional = true }
parry3d-f64 = { version = "0.19", features = [
    "required-features",
    "alloc",
], default-features = false, optional = true }

# Geometry operations
nalgebra-glm = { version = "0.19", default-features = false }

# Delegate methods from internal fields
delegate = "0.13"

# Dependencies for examples
[dev-dependencies]

# Quick rendering
macroquad = "0.4"

rapier3d = "0.26"
